--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@vitejs/plugin-vue": "^2.3.1",
     "eslint": "^8.15.0",
     "eslint-plugin-vue": "^8.7.1",
+    "husky": "^7.0.4",
     "sass": "^1.51.0",
     "typescript": "^4.5.4",
     "vite": "^2.9.7",
