--- a/package.json
+++ b/package.json
@@ -6,22 +6,32 @@
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src"
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src",
+    "test": "jest"
   },
   "dependencies": {
     "vue": "^3.2.25"
   },
   "devDependencies": {
+    "@babel/core": "^7.17.10",
+    "@babel/preset-env": "^7.17.10",
+    "@babel/preset-typescript": "^7.16.7",
+    "@types/jest": "^27.5.0",
     "@types/node": "^17.0.31",
     "@typescript-eslint/eslint-plugin": "^5.22.0",
     "@typescript-eslint/parser": "^5.22.0",
     "@vitejs/plugin-vue": "^2.3.1",
+    "@vue/test-utils": "^2.0.0-rc.18",
+    "babel-jest": "^26.6.3",
     "eslint": "^8.15.0",
     "eslint-plugin-vue": "^8.7.1",
     "husky": "^7.0.4",
+    "jest": "^26.6.3",
     "sass": "^1.51.0",
+    "ts-jest": "^26.5.6",
     "typescript": "^4.5.4",
     "vite": "^2.9.7",
+    "vue-jest": "^5.0.0-alpha.10",
     "vue-tsc": "^0.34.7"
   }
 }
